--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Journey</title>
+    <style>
+        .as-console-wrapper {
+            max-height: 100% !important;
+            top: 0;
+        }
+    </style>
 </head>
+
 <body>
-    
+
 
     <script src="js/basics/script.js"></script>
 </body>
+
 </html>
